    - Fall back to z_index=0 when an invalid z_index has been specified for sketchpad elements (#375)
    - Don't crash on empty filename in image element in sketchpad (#377)
    - Fix recursion error in overview area with multiple linked copies (#376)
    - Don't try to copy and edit non copyable/editable treeitems
    - Don't crash when failing to get size information for file pool
  * Improvements
    - Fix templates for Python 3
    - Fix Exception handling for multiprocess_runner in Python 3
    - Update German translation (de_DE)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sat, 07 Nov 2015 16:51:44 +0100

opensesame (3.0.2-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Don't crash on non-ascii values in variable inspector
    - Fix crash on invalid OpenSesame script
    - Improved validation and quote handling in conditional statements (#356)
    - Fix typo in bug_report success notification
    - Fix incorrect URL in Windows installer
    - Fix canvas.copy() (#355)
    - Fix variable inspection (don't crash on empty values)
    - Fix a crash when renaming a variable to itself
    - Fix a crash when creating a linked copy of a non-existing item
    - [Mac OS] Fix a crash when restoring config (#360)
    - Safely decode input in syntax (fixes non-ascii text in Python forms)
  * Improvements
    - Improved validation of variable names in loop item
    - Improved validation of OpenSesame-script syntax
    - Improved exception handling (including run-status emoticons)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Mon, 26 Oct 2015 14:31:00 +0100

opensesame (3.0.1-ubuntu1) vivid; urgency=medium

  * Bugs fixed
    - Fix crash on fallback_console reset
    - Catch syntax warnings in inline_script items
    - Fix deleting items from pool
  * Improvements
    - Give more informative error messages when using invalid variable names
    - Update auto_example plugin
    - Ignore 'undefined name' warnings when validating Python code (requires QProgEdit >= 3.1.0)